<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#252422">
    <com.furkanakdemir.surroundcardview.SurroundCardView
        android:backgroundTint="#ccc5b9"
        android:layout_height="10dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        app:cardCornerRadius="13dp"
        app:scv_width="4dp"
        app:scv_startPoint="top_start"
        app:scv_duration="3000"
        app:scv_surrounded="true"
        app:scv_color="#051923"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:boxStrokeColor="@color/black"
                android:textColorHint="#212121">
                <EditText
                    android:id="@+id/encryptTextEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/plaintext"
                    android:inputType="textLongMessage"
                    android:maxLength="100"
                    android:textColor="#070707"
                    android:textSize="15sp"
                    android:fontFamily="@font/amiko"
                    android:autofillHints="username"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/encryptBtn"
                android:layout_marginVertical="10dp"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="80dp"
                android:text="@string/encrypt"
                android:textAllCaps="false"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/amiko"
                android:textStyle="bold"
                android:textSize="18sp">
            </Button>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/encryptTv"
                            android:layout_height="60dp"
                            android:layout_width="match_parent"
                            android:layout_weight="2"
                            android:textSize="17sp"
                            android:hint="@string/your_encrypted_text"
                            android:fontFamily="@font/amiko"
                            android:gravity="center"
                            android:layout_marginEnd="5dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            />
                        <ImageButton
                            android:layout_weight="1"
                            android:id="@+id/copyToClipboardEn"
                            android:src="@drawable/clipboard45"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:background="#0003DAC5"
                            android:contentDescription="@string/copy_to_clipboard" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
    </com.furkanakdemir.surroundcardview.SurroundCardView>


    <com.furkanakdemir.surroundcardview.SurroundCardView
        android:backgroundTint="#ccc5b9"
        android:layout_height="10dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        app:cardCornerRadius="13dp"
        app:scv_width="4dp"
        app:scv_startPoint="top_start"
        app:scv_duration="3000"
        app:scv_surrounded="true"
        app:scv_color="#051923"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:boxStrokeColor="@color/black"
                android:textColorHint="#212121">
                <EditText
                    android:id="@+id/decryptTextEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/ciphertext"
                    android:inputType="textLongMessage"
                    android:maxLength="100"
                    android:textColor="#070707"
                    android:textSize="15sp"
                    android:fontFamily="@font/amiko"
                    android:autofillHints="username"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/decryptBtn"
                android:layout_marginVertical="10dp"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="80dp"
                android:text="@string/decrypt"
                android:textAllCaps="false"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/amiko"
                android:textStyle="bold"
                android:textSize="18sp">
            </Button>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/decryptTv"
                        android:layout_height="60dp"
                        android:layout_width="match_parent"
                        android:layout_weight="2"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:hint="@string/your_decrypted_text"
                        android:fontFamily="@font/amiko"
                        android:layout_marginEnd="5dp"
                        android:textColorHint="@color/black"
                        />
                    <ImageButton
                        android:layout_weight="1"
                        android:id="@+id/copyToClipboardDe"
                        android:src="@drawable/clipboard45"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="#0003DAC5"
                        android:contentDescription="@string/copy_to_clipboard" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.furkanakdemir.surroundcardview.SurroundCardView>
</LinearLayout>